fix: cors 버그 수정
- header 재설정
- allowOrigin 메서드 수정